--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,9 @@ jobs:
     - name: Install dependencies
       run: bun install --frozen-lockfile
     
+    - name: Run linter
+      run: bun run lint
+    
     - name: Run type checking
       run: bun run typecheck
     
