feat: enhance GitHub Actions release workflow with GitHub Packages support
- Add GitHub Packages publishing alongside npm registry
- Add proper permissions for GITHUB_TOKEN
- Include both npm and GitHub Packages installation instructions
- Add repository configuration for proper package publishing
- Enable dual publication for better distribution options

--- a/package.json
+++ b/package.json
@@ -79,5 +79,12 @@
   },
   "engines": {
     "bun": ">=1.0.0"
+  },
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/beshkenadze/eyecite-js.git"
   }
 }
