--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,6 +5,11 @@ on:
     tags:
       - 'v*'
 
+permissions:
+  contents: write
+  packages: write
+  id-token: write
+
 jobs:
   release:
     runs-on: ubuntu-latest
@@ -61,6 +66,19 @@ jobs:
       env:
         NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
     
+    - name: Setup Node.js for GitHub Packages
+      uses: actions/setup-node@v4
+      with:
+        node-version: '20'
+        registry-url: 'https://npm.pkg.github.com'
+        scope: '@beshkenadze'
+    
+    - name: Publish to GitHub Packages
+      run: |
+        npm publish --tag ${{ steps.npm_tag.outputs.tag }}
+      env:
+        NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    
     - name: Create GitHub Release
       uses: actions/create-release@v1
       env:
@@ -78,8 +96,15 @@ jobs:
           - Citation annotation and resolution
           
           ### Installation
+          
+          **From npm:**
           ```bash
           npm install @beshkenadze/eyecite-js@${{ steps.npm_tag.outputs.tag }}
+          ```
+          
+          **From GitHub Packages:**
+          ```bash
+          npm install @beshkenadze/eyecite-js@${{ steps.npm_tag.outputs.tag }} --registry=https://npm.pkg.github.com
           ```
           
           ### Documentation
