chore: clean up repository by removing debug and temporary files
- Remove 23 debug-*.ts/js files that were accidentally committed
- Remove temporary test-*.ts/js files from development
- Remove example/demo files like citation-dump.ts, parse-*.ts
- Update .gitignore to prevent future accidental commits of debug files
- Add patterns for debug-*, test-*, example-*, demo-*, verify-*, check-* files

Repository is now clean with only production code and proper documentation.

--- a/.gitignore
+++ b/.gitignore
@@ -101,6 +101,19 @@ public
 tmp/
 temp/
 
+# Debug and development files
+debug-*.ts
+debug-*.js
+test-*.ts
+test-*.js
+*-debug.ts
+*-debug.js
+verify-*.ts
+check-*.ts
+example-*.ts
+demo-*.ts
+temp-*.ts
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
