--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -5,6 +5,11 @@ on:
     branches: [ main, develop ]
     types: [opened, synchronize, reopened]
 
+permissions:
+  contents: read
+  pull-requests: write
+  issues: write
+
 jobs:
   validate:
     runs-on: ubuntu-latest
@@ -43,6 +48,7 @@ jobs:
       uses: actions/github-script@v7
       if: github.event.action == 'opened'
       with:
+        github-token: ${{ secrets.PAT_TOKEN }}
         script: |
           github.rest.issues.createComment({
             issue_number: context.issue.number,
