--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -18,7 +18,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          token: ${{ secrets.PAT_TOKEN }}
+          token: ${{ secrets.PAT_TOKEN || secrets.GITHUB_TOKEN }}
           
       - name: Generate Changelog
         uses: orhun/git-cliff-action@v4
@@ -30,13 +30,19 @@ jobs:
           
       - name: Commit and Push
         run: |
-          git config user.name 'github-actions[bot]'
-          git config user.email 'github-actions[bot]@users.noreply.github.com'
+          git config --local user.name 'github-actions[bot]'
+          git config --local user.email 'github-actions[bot]@users.noreply.github.com'
           
-          if git diff --quiet; then
-            echo "No changes to CHANGELOG.md"
-          else
+          # Check if CHANGELOG.md exists and has changes
+          if [ -f CHANGELOG.md ]; then
             git add CHANGELOG.md
-            git commit -m "docs: update CHANGELOG.md [skip ci]"
-            git push
+            if git diff --cached --quiet; then
+              echo "No changes to CHANGELOG.md"
+            else
+              git commit -m "docs: update CHANGELOG.md [skip ci]"
+              git push origin main
+            fi
+          else
+            echo "CHANGELOG.md was not generated"
+            exit 1
           fi
