fix: resolve GitHub workflow recursion and cleanup [skip ci]
Fix CI recursion issues and cleanup duplicate workflows:

RECURSION FIXES:
- Add [skip ci] conditions to ci.yml and pr.yml workflows
- Add [skip ci] to version.yml commit messages
- Prevent workflows from triggering themselves infinitely

WORKFLOW CLEANUP:
- Remove changelog-pr.yml (duplicate of changelog.yml)
- Remove release-with-cliff.yml (duplicate of release.yml)
- Remove example-signed-commit.yml (demo file no longer needed)

REMAINING WORKFLOWS:
- ci.yml: Main CI pipeline (now respects [skip ci])
- pr.yml: Pull request validation (now respects [skip ci])
- changelog.yml: Changelog updates on releases
- release.yml: NPM/GitHub package publishing
- version.yml: Manual version management (now uses [skip ci])

This should resolve the recursion that was causing CI to be disabled.

--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -78,7 +78,7 @@ jobs:
     - name: Commit version bump
       run: |
         git add package.json
-        git commit -m "chore: bump version to ${{ steps.version.outputs.new_version }}"
+        git commit -m "chore: bump version to ${{ steps.version.outputs.new_version }} [skip ci]"
     
     - name: Create and push tag
       run: |
