--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -13,6 +13,8 @@ permissions:
 jobs:
   validate:
     runs-on: ubuntu-latest
+    # Skip PR validation if commit message contains [skip ci] or [ci skip]
+    if: "!contains(github.event.head_commit.message, '[skip ci]') && !contains(github.event.head_commit.message, '[ci skip]')"
     
     steps:
     - name: Checkout repository
